fix: harden suite metric contracts